# douyin_video_preprocess

./: .gitignore  CLAUDE.md  clean_data.py  data_flow.md  pyproject.toml  requirements.txt
pipeline/: 01_download.py  02_extract_audio.py  03_demucs_separate.py  03_ensemble_separate.py  03_mdx23c_separate.py  04_diarization.py  04_diarization_ad.py  04_diarization_community.py  04_diarization_old.py  04b_snr_filter.py  05_asr_transcribe.py  06_dataset_build.py  07_analysis.py  08_audio_evaluation.py  09_inspection_gradio.py  __init__.py  __main__.py  config.yaml  run_pipeline.py  run_pipeline.sh  utils.py
